force-app/main/default/objects/DemandeRDV__e/DemandeRDV__e.object-meta.xml
<CustomObject>
    <description>CGI-FSL : Platform Event utilisé par la GC lors de la création d&apos;une demande de rendez-vous.</description>
    <label>DemandeRDV</label>
    <pluralLabel>DemandesRDV</pluralLabel>
</CustomObject>