force-app/main/default/objects/DemandeRDV__e/fields/fsl_accountExternal__c.field-meta.xml
<CustomField>
    <fullName>fsl_accountExternal__c</fullName>
    <description>CGI - FSL : Ce champ contient l&apos;ID externe du compte.</description>
    <label>AccountExternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>