force-app/main/default/objects/DemandeRDV__e/fields/fsl_chiffreAffaire__c.field-meta.xml
<CustomField>
    <fullName>fsl_chiffreAffaire__c</fullName>
    <description>CGI - FSL : Ce champ contient le chiifre d&apos;affaires de la demande de rendez-vous.</description>
    <label>ChiffreAffaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>