force-app/main/default/objects/DemandeRDV__e/fields/fsl_city__c.field-meta.xml
<CustomField>
    <fullName>fsl_city__c</fullName>
    <description>CGI - FSL : Ce champ contient la ville du lieu de rendez-vous.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>