force-app/main/default/objects/DemandeRDV__e/fields/fsl_country__c.field-meta.xml
<CustomField>
    <fullName>fsl_country__c</fullName>
    <description>CGI - FSL : Ce champ contient le pays du lieu de rendez-vous.</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>