force-app/main/default/objects/DemandeRDV__e/fields/fsl_documentsAttendus__c.field-meta.xml
<CustomField>
    <fullName>fsl_documentsAttendus__c</fullName>
    <description>CGI - FSL : Avis d&apos;imposition attendu
Chèque annulé
Pièce d&apos;identité	
Rib	
Bulletin de salaire	
Attestation TVA</description>
    <label>DocumentsAtttendus</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>