force-app/main/default/objects/DemandeRDV__e/fields/fsl_duration__c.field-meta.xml
<CustomField>
    <fullName>fsl_duration__c</fullName>
    <description>CGI - FSL : Ce champ contient la durée du rendez-vous qui sera généré.</description>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>