force-app/main/default/objects/DemandeRDV__e/fields/fsl_durationType__c.field-meta.xml
<CustomField>
    <fullName>fsl_durationType__c</fullName>
    <description>CGI - FSL : Ce champ contient le type de durée du RDV .</description>
    <label>DurationType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>