force-app/main/default/objects/DemandeRDV__e/fields/fsl_endDate__c.field-meta.xml
<CustomField>
    <fullName>fsl_endDate__c</fullName>
    <description>CGI - FSL : Ce champ contient la date au plus tard pour planifier un rendez-vous.</description>
    <label>End date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>