force-app/main/default/objects/DemandeRDV__e/fields/fsl_homephone__c.field-meta.xml
<CustomField>
    <fullName>fsl_homephone__c</fullName>
    <label>Téléphone domicile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>