force-app/main/default/objects/DemandeRDV__e/fields/fsl_isEcho__c.field-meta.xml
<CustomField>
    <fullName>fsl_isEcho__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CGI - FSL : Si true, publier Notificationecho; si false, créer WorkOrder</description>
    <label>IsEcho</label>
    <type>Checkbox</type>
</CustomField>