force-app/main/default/objects/DemandeRDV__e/fields/fsl_mobilephone__c.field-meta.xml
<CustomField>
    <fullName>fsl_mobilephone__c</fullName>
    <label>Téléphone mobile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>