force-app/main/default/objects/DemandeRDV__e/fields/fsl_montantAttendu__c.field-meta.xml
<CustomField>
    <fullName>fsl_montantAttendu__c</fullName>
    <description>CGI - FSL : Ce champ contient le montant attendu du rendez-vous.</description>
    <label>MontantAttendu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>