force-app/main/default/objects/DemandeRDV__e/fields/fsl_MontantContrat__c.field-meta.xml
<CustomField>
    <fullName>fsl_MontantContrat__c</fullName>
    <label>Montant du contrat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>