force-app/main/default/objects/DemandeRDV__e/fields/fsl_nombreIntervenants__c.field-meta.xml
<CustomField>
    <fullName>fsl_nombreIntervenants__c</fullName>
    <description>CGI - FSL : Ce champ contient le nombre d&apos;intervenants sur le Rdv qui sera généré.</description>
    <label>Nombre d&apos;Intervenants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>