force-app/main/default/objects/DemandeRDV__e/fields/fsl_postalCode__c.field-meta.xml
<CustomField>
    <fullName>fsl_postalCode__c</fullName>
    <description>CGI - FSL : Ce champ contient le code postal du lieu de rendez-vous.</description>
    <label>PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>