force-app/main/default/objects/DemandeRDV__e/fields/fsl_priority__c.field-meta.xml
<CustomField>
    <fullName>fsl_priority__c</fullName>
    <description>CGI - FSL : Ce champ contient la priorité du Work Order..</description>
    <label>Priorité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>