force-app/main/default/objects/DemandeRDV__e/fields/fsl_RessourcesInterdites__c.field-meta.xml
<CustomField>
    <fullName>fsl_RessourcesInterdites__c</fullName>
    <description>CGI - FSL : Ce champ contient les ressources qui ne doivent pas participer au RdV</description>
    <label>RessourcesInterdites</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>