force-app/main/default/objects/DemandeRDV__e/fields/fsl_RessourcesObligatoires__c.field-meta.xml
<CustomField>
    <fullName>fsl_RessourcesObligatoires__c</fullName>
    <description>CGI - FSL : Ce champ contient les ressources obligatoires pour réaliser ce RdV</description>
    <label>RessourcesObligatoires</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>