force-app/main/default/objects/DemandeRDV__e/fields/fsl_RessourcesRecommandees__c.field-meta.xml
<CustomField>
    <fullName>fsl_RessourcesRecommandees__c</fullName>
    <description>CGI - FSL : Ce champ contient les ressources recommandées pour réaliser ce RdV</description>
    <label>RessourcesRecommandees</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>