force-app/main/default/objects/DemandeRDV__e/fields/fsl_skillExternal__c.field-meta.xml
<CustomField>
    <fullName>fsl_skillExternal__c</fullName>
    <description>CGI - FSL : Ce champ contient le nom externe de skill et son niveau(Skill: level; Skill: level;)</description>
    <label>SkillExternal</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>