force-app/main/default/objects/DemandeRDV__e/fields/fsl_SoldeClient__c.field-meta.xml
<CustomField>
    <fullName>fsl_SoldeClient__c</fullName>
    <label>Solde du client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>