force-app/main/default/objects/DemandeRDV__e/fields/fsl_startDate__c.field-meta.xml
<CustomField>
    <fullName>fsl_startDate__c</fullName>
    <description>CGI - FSL : Ce champ contient la date au plus tôt pour planifier un rendez-vous.</description>
    <label>Start date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>