force-app/main/default/objects/DemandeRDV__e/fields/fsl_state__c.field-meta.xml
<CustomField>
    <fullName>fsl_state__c</fullName>
    <description>CGI - FSL : Ce champ contient la région du lieu de rendez-vous.</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>