force-app/main/default/objects/DemandeRDV__e/fields/fsl_street__c.field-meta.xml
<CustomField>
    <fullName>fsl_street__c</fullName>
    <description>CGI - FSL : Ce champ contient la rue du lieu de rendez-vous.</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>