force-app/main/default/objects/DemandeRDV__e/fields/fsl_subject__c.field-meta.xml
<CustomField>
    <fullName>fsl_subject__c</fullName>
    <description>CGI - FSL : Ce champ contient l&apos;objet du Work Order qui sera généré.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>