force-app/main/default/objects/DemandeRDV__e/fields/fsl_workTypeExternal__c.field-meta.xml
<CustomField>
    <fullName>fsl_workTypeExternal__c</fullName>
    <description>CGI - FSL : Ce champ contient le nom externe du Work Type</description>
    <label>WorkTypeExternal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>